etc/iptables/iptables.rules
# Generated by iptables-save v1.6.0 on Fri May 20 23:47:44 2016
*filter
:INPUT DROP [172:65127]
:FORWARD DROP [0:0]
:OUTPUT DROP [18:1458]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m state --state RELATED,ESTABLISHED -m tcp --dport 1022 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 443 -j ACCEPT
-A INPUT -s 127.0.0.0/8 ! -i lo -j REJECT --reject-with icmp-port-unreachable
-A INPUT -i eth0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 21194 -j ACCEPT
-A INPUT -i tun+ -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 9001 -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 10.8.0.0/24 -i tun+ -o eth0 -j ACCEPT
-A FORWARD -s 10.10.0.0/24 -i tun+ -o eth0 -j ACCEPT
-A OUTPUT ! -s 127.0.0.1/32 ! -d 127.0.0.1/32 ! -o lo -p tcp -m tcp --tcp-flags RST,ACK RST,ACK -j DROP
-A OUTPUT ! -s 127.0.0.1/32 ! -d 127.0.0.1/32 ! -o lo -p tcp -m tcp --tcp-flags FIN,ACK FIN,ACK -j DROP
-A OUTPUT -m state --state INVALID -j DROP
-A OUTPUT -m conntrack --ctstate INVALID -j DROP
-A OUTPUT -p tcp -m state --state RELATED,ESTABLISHED -m tcp --sport 1022 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m state --state ESTABLISHED -m tcp --sport 443 -j ACCEPT
-A OUTPUT -o eth0 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o tun+ -j ACCEPT
COMMIT
# Completed on Fri May 20 23:47:44 2016
# Generated by iptables-save v1.6.0 on Fri May 20 23:47:44 2016
*nat
:PREROUTING ACCEPT [9219:1396632]
:INPUT ACCEPT [37:2078]
:OUTPUT ACCEPT [489:33777]
:POSTROUTING ACCEPT [991:61447]
-A PREROUTING -i tun+ -p udp -m udp --dport 53 -j REDIRECT --to-ports 5353
-A PREROUTING -i tun+ -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j REDIRECT --to-ports 9040
-A OUTPUT -p udp -m udp --dport 53 -j REDIRECT --to-ports 5353
-A POSTROUTING -s 10.8.0.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 10.10.0.0/24 -o eth0 -j MASQUERADE
COMMIT
# Completed on Fri May 20 23:47:44 2016
# Generated by iptables-save v1.6.0 on Fri May 20 23:47:44 2016
*mangle
:PREROUTING ACCEPT [570881:397176338]
:INPUT ACCEPT [568997:396739516]
:FORWARD ACCEPT [133:11004]
:OUTPUT ACCEPT [139193:18595769]
:POSTROUTING ACCEPT [129010:18028786]
COMMIT
# Completed on Fri May 20 23:47:44 2016
# Generated by iptables-save v1.6.0 on Fri May 20 23:47:44 2016
*raw
:PREROUTING ACCEPT [570881:397176338]
:OUTPUT ACCEPT [139193:18595769]
COMMIT
# Completed on Fri May 20 23:47:44 2016
